--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <h1>CSI-LSTM</h1>
 <p>You can download CSI-LSTM from this link: https://github.com/eagleccnu/CSI_LSTM/tree/master </p>
   <p>Its citation is J Biomol NMR 2021, 75 (10-12), 393-400. </p>
+
+<h1>OPPE</h1>
+<p>You can download OPPE from this link: https://github.com/eagleccnu/OPPE </p>
+  <p>Its citation is J Biomol NMR 2024, 78, 87-94. </p>
  
 </body>
 </html>
