--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
 <p>Our research team developed some deep learning methods for protein science. We originally hoped to build a website to provide corresponding online services for everyone. But for some reasons, we have suspended these online services. If you want to use these methods, you can download the corresponding programs from GitHub.</p>
  
 <h1>CSI-LSTM</h1>
-<p>You can download CSI-LSTM from this link: https://github.com/eagleccnu/CSI_LSTM/tree/master </p>
+   <p>This is a script to predict protein secondary structure from its NMR chemical shifts using LSTM method. </p>
+   <p>You can download CSI-LSTM from this link: https://github.com/eagleccnu/CSI_LSTM/tree/master </p>
   <p>Its citation is J Biomol NMR 2021, 75 (10-12), 393-400. </p>
 
 <h1>OPPE</h1>
-<p>You can download OPPE from this link: https://github.com/eagleccnu/OPPE </p>
+  <p>This is a script to predict protein order parameter from its NMR structure ensemble using random forest method. </p>
+  <p>You can download OPPE from this link: https://github.com/eagleccnu/OPPE </p>
   <p>Its citation is J Biomol NMR 2024, 78, 87-94. </p>
+
+<h1>RH-Unet</h1>
+  <p>This is a script to correct peak shapes in 1D NMR spectrum sampled in inhomogeneous field using U-net method. </p>
+  <p>You can download RH-Unet from this link: https://github.com/eagleccnu/OPPE </p>
+  <p>Its citation is Anal Chem 2023, 95(45), 16567-16574. </p>
  
 </body>
 </html>
