--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
 
 <h1>RH-Unet</h1>
   <p>This is a script to correct peak shapes in 1D NMR spectrum sampled in inhomogeneous field using U-net method. </p>
-  <p>You can download RH-Unet from this link: https://github.com/eagleccnu/OPPE </p>
+  <p>You can download RH-Unet from this link: https://github.com/eagleccnu/RH-Unet </p>
   <p>Its citation is Anal Chem 2023, 95(45), 16567-16574. </p>
+
+ <h1>SENNet</h1>
+  <p>This is a script to seperate NMR signals of small and large molecules from 1D NMR spectrum using U-net method. </p>
+  <p>You can download RH-Unet from this link: https://github.com/eagleccnu/SENNet </p>
+  <p>Its citation is Comm Chem 2024, 7(1), 167. </p>
  
 </body>
 </html>
