--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
 <h1>About this website</h1>
  
-<p>Our research team developed some deep learning methods for protein science. We originally hoped to build a website to provide corresponding online services for everyone. But for some reasons, we have suspended these online services. If you want to use these methods, you can download the corresponding programs from GitHub.</p>
+<p>This website is to provide some software packages developed by <b>Prof.Maili Liu's research group</b> of APM, CAS. Our research team developed some deep learning methods for protein science. We hoped to build a website to provide corresponding online services for everyone. But for some reasons, we have suspended these online services. If you want to use these methods, you can download the corresponding programs from GitHub.</p>
  
 <h1>CSI-LSTM</h1>
    <p>This is a script to predict protein secondary structure from its NMR chemical shifts using LSTM method. </p>
