--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <style>
  body { width: 1200px; }
  .header { width: 1200px; }
- .container { display: flex; }
+ .container { display: 1200px; }
 </style>
 </head>
 <body>
     <div class="header">
-        <img src="pic/name_of_Liu_group.png" width="1200" />
+        <img src="name_of_Liu_group.png" width="1200" />
     </div> 
     
    <div class="container">
