--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
            <p>You can download RH-Unet from this link: https://github.com/eagleccnu/SENNet </p>
            <p>Its citation is Comm Chem 2024, 7(1), 167. </p>
 
+       <h1>SSF-LSTM</h1>
+           <p>This is a script to predict B-facotor of protein using LSTM network. </p>
+           <p>You can download SSF-LSTM from this link: https://github.com/eagleccnu/SSF-LSTM </p>
+           <p>Its citation is doi:10.26434/chemrxiv-2023-59cp5. </p>
+
    </div>
     
 </body>
